if (USE_CC_PEGASUS)
	message(STATUS "file output directory: ${ATD_MASTER_ROOT}/upload_files")
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ATD_MASTER_ROOT}/upload_files/lib)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ATD_MASTER_ROOT}/upload_files/lib)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ATD_MASTER_ROOT}/upload_files)
else()
	message(STATUS "file output directory: ${ATD_MASTER_ROOT}/bin")
	set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${ATD_MASTER_ROOT}/bin/lib)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${ATD_MASTER_ROOT}/bin/lib)
	set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${ATD_MASTER_ROOT}/bin)
endif()

# add_subdirectory(common)
# add_subdirectory(AlgthmLauncher)
# add_subdirectory(ShmService)
add_subdirectory(neo_adp)
