CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
project(ShmService)

file(GLOB_RECURSE PROJECT_HEADERS)
file(GLOB_RECURSE PROJECT_SOURCES  
	"main.cc")

file(GLOB_RECURSE PROJECT_LIBRARIES
	"${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/libcommon.so")

add_executable(${PROJECT_NAME} ${PROJECT_SOURCES} ${PROJECT_HEADERS})
target_link_libraries(${PROJECT_NAME} ${PROJECT_LIBRARIES})
